--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                <a href="#" class="book_link">立即预约</a>  
             </div>
             <!-- 右浮动 -->
-            <div class="pull-right">
+            <div class="pull-right hidden-xs">
                 <a href="#" class="media_link">
                    <span class="wjs_icon wjs_icon_E905"></span>
                    <span>微金所企业宣传片</span>
@@ -191,7 +191,33 @@
         </div>
     </div>
     <!-- 产品 -->
-    <div class="wjs_product"></div>
+    <div class="wjs_product">
+    <!-- 版心 -->
+      <div class="container">
+       <div class="wjs_product_tabsParent">
+        <ul class="nav nav-tabs" role="tablist">
+          <li role="presentation" class="active"><a href="#wjs_product_tab01" aria-controls="wjs_product_tab01" role="tab" data-toggle="tab">特别推荐</a></li>
+          <li role="presentation"><a href="#wjs_product_tab02" aria-controls="wjs_product_tab02" role="tab" data-toggle="tab">微投资</a></li>
+          <li role="presentation"><a href="#wjs_product_tab03" aria-controls="wjs_product_tab03" role="tab" data-toggle="tab">微投资</a></li>
+          <li role="presentation"><a href="#wjs_product_tab04" aria-controls="wjs_product_tab04" role="tab" data-toggle="tab">微投资</a></li>
+          <li role="presentation"><a href="#wjs_product_tab05" aria-controls="wjs_product_tab05" role="tab" data-toggle="tab">微投资</a></li>
+          <li role="presentation"><a href="#wjs_product_tab06" aria-controls="wjs_product_tab06" role="tab" data-toggle="tab">微投资</a></li>
+          <li role="presentation"><a href="#wjs_product_tab07" aria-controls="wjs_product_tab07" role="tab" data-toggle="tab">微投资</a></li>
+        </ul>
+       </div>
+
+        <!-- Tab panes -->
+        <div class="tab-content">
+          <div role="tabpanel" class="tab-pane active" id="wjs_product_tab01">1</div>
+          <div role="tabpanel" class="tab-pane" id="wjs_product_tab02">2</div>
+          <div role="tabpanel" class="tab-pane" id="wjs_product_tab03">3</div>
+          <div role="tabpanel" class="tab-pane" id="wjs_product_tab04">4</div>
+          <div role="tabpanel" class="tab-pane" id="wjs_product_tab05">5</div>
+          <div role="tabpanel" class="tab-pane" id="wjs_product_tab06">6</div>
+          <div role="tabpanel" class="tab-pane" id="wjs_product_tab07">7</div>
+        </div>
+     </div>
+    </div>
     <!-- 新闻 -->
     <div class="wjs_news"></div>
     <!-- 合作伙伴 -->
@@ -226,6 +252,7 @@
     <script src="lib/jquery/jquery.js"></script>
     <script src="lib/bootstrap/js/bootstrap.js"></script>
     <script src="lib/underscore/underscore-min.js"></script>
+    <script type="text/javascript" src="js/swipe.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
   </body>
 </html>
